--- a/Web_Lab1/Web_Lab1.csproj
+++ b/Web_Lab1/Web_Lab1.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<DocumentationFile>bin\Debug\net8.0\Web_Lab1.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
