--- a/Web_Lab1/appsettings.json
+++ b/Web_Lab1/appsettings.json
@@ -1,28 +1,13 @@
 {
-  "ConnectionStrings": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Serilog": {
-    "MinimumLevel": {
+  "Logging": {
+    "LogLevel": {
       "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "File",
-        "Args": {
-          "path": "./logs/log-.txt",
-          "rollingInterval": "Day"
-        }
-      },
-      {
-        "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:5341" }
-      }
-    ]
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProgramAuthor": {
+    "PhoneNumber": "+380671053855",
+    "Email": "alex59.kovalenko@gmail.com"
+  }
 }
