--- a/Web_Lab1/appsettings.Development.json
+++ b/Web_Lab1/appsettings.Development.json
@@ -2,7 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Web_Lab2.Controllers": "Debug"
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Debug"
+      }
     }
   }
 }
